Added Editor and Preview components, Marked library

--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.1/marked.min.js</script>
 </html>
