--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script>https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.1/marked.min.js</script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
